<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatView">

    <EditText
        android:id="@+id/etCatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_cats_name"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"/>

    <EditText
        android:id="@+id/etCatColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cat_color"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
</LinearLayout>
